# faces_detector

./: .travis.yml  CMakeLists.txt  INSTALL  README  README.md
src/: CMakeLists.txt  array_to_color.h  color_face_detector.cpp  color_face_detector.h  colormaps.h  cv_conversion_float_uchar.h  debug.h  img_path.h  opencv_face_detector.h  stats_utils.h  test_opencv_face_detector.cpp  texture_sensor.cpp  texture_sensor.h  timer_ros.h
